--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 	
-  <img src="smiley.gif" alt="Smiley face" height="42" width="42">
+  <img src="owca.jpg">
   
 	</body>
 </html>
